Fix text search bar text color when in dark mode and fix max height of cards so they don't take up viewport height

--- a/src/styles/CountryCard.css
+++ b/src/styles/CountryCard.css
@@ -1,3 +1,4 @@
 .country-card{
   margin-bottom: 40px;
+  max-height: 330px;
 }
